# rank_by_group

./: pyproject.toml  rank_by_group.ipynb
data/: rand_df.csv
